appId: ${APP_ID} # iOS: com.meta.RNTester.localDevelopment | Android: com.facebook.react.uiapp
---
- launchApp
- stopApp
- openLink: rntester://example/TextInput/uncontrolledComponent
- runFlow: ./helpers/confirm-open-link.yml
- extendedWaitUntil:
    visible:
      id: 'uncontrolled-textinput'
    timeout: 120000
- tapOn:
    id: 'uncontrolled-textinput'
- eraseText
- inputText: 'New value'
- assertVisible:
    id: 'uncontrolled-textinput'
    text: 'New value'
